# s2t_rover

./: README.md  main.py  pico_control.py  pico_telemetry.py
brain/protocol/: bs_contract_constants.h  bs_crc.cpp  bs_framer.cpp  bs_header.cpp  bs_packet.cpp  bs_protocol.h  bs_tool.cpp
docs/: 00_PROJECT_CONSTITUTION.md  01_CONTEXT_PACK.md  02_DECISION_LOG.md  03_BACKLOG.md  04_SPECS_AND_INTERFACES.md  05_RISK_REGISTER.md  06_RULES_AND_PROCESS_LOG.md  07_UPDATE_AND_MEMORY_RULES.md  08_NAMING_CONVENTIONS.md  09_MODULE_RULES.md  10_CODING_STANDARDS.md  11_LEXICON.md  BRAIN_SPINE_MESSAGE_CONTRACT.md  LLMS.txt  PROJECT_HISTORY.md  README.md
notes/: NON_BINDING_RESEARCH_SPACE.md
spine/: .gitignore  CMakeLists.txt  main.cpp  proto_constants.h  proto_crc.cpp  proto_crc.h  proto_header.cpp  proto_header.h  proto_packet.cpp  proto_packet.h  scanner.cpp
